<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_attendance"
        android:icon="@drawable/ic_assignment_turned_in_black_24dp"
        android:title="@string/attendance" />

    <item
        android:id="@+id/nav_courses"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="@string/courses" />

    <item
        android:id="@+id/nav_forum"
        android:icon="@drawable/ic_forum_black_24dp"
        android:title="@string/forum" />

    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications" />

</menu>
